<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.hotrodorm.pocs</groupId>
  <artifactId>poc-springboot-web</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>poc-springboot-web</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <hotrod.version>3.4.2-SNAPSHOT</hotrod.version>
  </properties>

  <dependencies>

    <!-- 1. Spring Boot -->

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
      <version>2.3.4.RELEASE</version>
      <!-- Removing default logger engine for Spring Boot -->
      <exclusions>
        <exclusion>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <!-- 1.b Enabling Log4j2 setup for Spring Boot -->

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-log4j2</artifactId>
      <version>2.3.4.RELEASE</version>
    </dependency>

    <!-- 1.c Spring AOP -->

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-aop</artifactId>
      <version>2.3.4.RELEASE</version>
    </dependency>
 
    <!-- 2. MyBatis Spring -->

    <dependency>
      <groupId>org.mybatis.spring.boot</groupId>
      <artifactId>mybatis-spring-boot-starter</artifactId>
      <version>2.1.3</version>
    </dependency>

    <!-- 3. HotRod -->

    <dependency>
      <groupId>org.hotrodorm.hotrod</groupId>
      <artifactId>hotrod</artifactId>
      <version>${hotrod.version}</version>
    </dependency>

    <dependency>
      <groupId>org.hotrodorm.hotrod</groupId>
      <artifactId>hotrod-livesql</artifactId>
      <version>${hotrod.version}</version>
    </dependency>

    <!-- 4. Log4j 2 -->

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.12.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.12.1</version>
    </dependency>

    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.2.5.jre6</version>
      <type>jar</type>
      <scope>runtime</scope>
    </dependency>

    <!-- Integrating springdoc-openapi With Spring WebFlux -->

    <!-- Enable as needed 
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-webflux-ui</artifactId>
      <version>1.2.32</version>
    </dependency>
    -->

  </dependencies>

  <build>

    <finalName>my-web-app-${project.version}</finalName>

    <plugins>

      <!-- Database builder -->

      <plugin>
        <groupId>org.nocrala.tools.database.builder</groupId>
        <artifactId>database-builder-maven-plugin</artifactId>
        <version>1.2.2</version>
        <configuration>
          <sourcedir>src/database/postgresql-12.4/database-source</sourcedir>
          <targetversion>1.0.0</targetversion>
          <layeredbuild>true</layeredbuild>
          <layeredscenario>false</layeredscenario>
          <onbuilderror>stop</onbuilderror>
          <oncleanerror>continue</oncleanerror>
          <localproperties>src/database/postgresql-12.4/dev.properties</localproperties>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.2.5.jre6</version>
            <type>jar</type>
          </dependency>
        </dependencies>
      </plugin>

      <!-- HotRod Generation -->

      <plugin>
        <groupId>org.hotrodorm.hotrod</groupId>
        <artifactId>hotrod-maven-plugin</artifactId>
        <version>${hotrod.version}</version>
        <configuration>
          <localproperties>src/database/postgresql-12.4/dev.properties</localproperties>
          <txtexportfile>src/database/postgresql-12.4/export-columns.txt</txtexportfile>
          <xlsxexportfile>src/database/postgresql-12.4/export-columns.xlsx</xlsxexportfile>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.2.5.jre6</version>
            <type>jar</type>
          </dependency>
        <!-- 
<dependency>
    <groupId>com.h2database</groupId>
    <artifactId>h2</artifactId>
    <version>1.4.197</version>
</dependency>   
          -->
       
        </dependencies>
      </plugin>

      <!-- Spring Boot plugin -->

      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>2.3.4.RELEASE</version>
        <executions>
          <execution>
            <goals>
              <goal>repackage</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

    </plugins>

    <pluginManagement>

      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.1</version>
          <configuration>
            <compilerArgs>
              <arg>-Xlint</arg>
            </compilerArgs>
          </configuration>
        </plugin>
      </plugins>

    </pluginManagement>

  </build>

  <profiles>

    <profile>
      <id>genopenapi</id>
  
      <!-- Run as: mvn -P genopenapi clean verify -->
      <!-- Generates: target/openapi.yaml -->
          
      <!-- Open API service -->

      <dependencies>
        <dependency>
          <groupId>org.springdoc</groupId>
          <artifactId>springdoc-openapi-ui</artifactId>
          <version>1.2.32</version>
        </dependency>
      </dependencies>

      <build>
        <plugins>

          <!-- Spring Boot plugin - starts/stops the OpenAPI server -->

          <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <version>2.3.4.RELEASE</version>
            <executions>
              <execution>
                <id>pre-integration-test</id>
                <goals>
                  <goal>start</goal>
                </goals>
              </execution>
              <execution>
                <id>post-integration-test</id>
                <goals>
                  <goal>stop</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <!-- Generating OpenAPI docs -->

          <plugin>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-maven-plugin</artifactId>
            <version>0.2</version>
            <executions>
              <execution>
                <phase>integration-test</phase>
                <goals>
                  <goal>generate</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <!-- To get the API in YAML format -->
              <apiDocsUrl>http://localhost:8080/v3/api-docs.yaml</apiDocsUrl>
              <outputFileName>openapi.yaml</outputFileName>
              <outputDir>${project.build.directory}</outputDir>
              <!-- To get the API in JSON format -->
              <!--
              <apiDocsUrl>http://localhost:8080/v3/api-docs</apiDocsUrl>
              <outputFileName>openapi.json</outputFileName>
              <outputDir>${project.build.directory}</outputDir>
              -->
            </configuration>
          </plugin>

        </plugins>

      </build>

    </profile>

  </profiles>

</project>
